[metadata]
name = clipassgen
version = 0.5.1
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Cross-platform console utility for generating cryptographically strong, recoverable, smart passwords.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/clipassgen/
project_urls =
    Documentation = https://github.com/smartlegionlab/clipassgen/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/clipassgen/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    clipassgen
    password generator
    passgen
    smartpasslib
    smart password generator
    cli password generator
    smartlegionlab

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click ~= 8.0.1
    smartcliapp~=0.4.0
    smartpasslib~=0.4.0

[options.entry_points]
console_scripts =
    clipassgen = clipassgen.app:cli

[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py