[metadata]
name = clipassgen
version = 0.7.2
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Console Smart Passwords Generator. Cross-platform console utility for generating cryptographically strong, recoverable, smart passwords.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/clipassgen/
project_urls =
    Documentation = https://github.com/smartlegionlab/clipassgen/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/clipassgen/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    clipassgen
    password generator
    passgen
    smart password generator
    cli password generator
    Console Smart Passwords Generator
    smartpasslib
    smartlegionlab

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =

[options.entry_points]
console_scripts =
    clipassgen = clipassgen.app:cli
